# claude-stats

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  go.mod  install.ps1  install.sh  public_key.pem  pyproject.toml
.github/workflows/: release.yml
cmd/claude-stats/: main.go
internal/commands/: digest.go  efficiency.go  heatmap.go  helpers.go  lines.go  prompts.go  report.go  sessions.go  tokens.go  tools.go  trends.go
internal/config/: config.go
internal/dates/: dates.go
internal/format/: color.go  format.go
internal/projects/: projects.go
internal/session/: session.go
scripts/: release.sh
src/claude_stats/: __init__.py  __main__.py  cli.py  digest.py  efficiency.py  heatmap.py  lines.py  prompts.py  report.py  sessions_health.py  tokens.py  tools.py
src/claude_stats/common/: __init__.py  config.py  dates.py  formatting.py  projects.py  sessions.py
