[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-stats"
version = "0.1.0"
description = "Analytics suite for Claude Code — tokens, tools, sessions, efficiency, and more"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Andrés Añez" }]
keywords = ["claude", "analytics", "cli", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
claude-stats = "claude_stats.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
